--- a/assets/app/input/inputBox.html
+++ b/assets/app/input/inputBox.html
@@ -1,6 +1,18 @@
 <div class="container-fluid message-input" ng-show="$root.roomId && !$stateParams.date"
 		 ng-class="{'edit-mode' : editMode}">
 	<div class="row">
+		<div class="dropdown dropup">
+			<button class="hidden btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+				Dropdown
+				<span class="caret"></span>
+			</button>
+			<ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
+				<li><a href="#">Action</a></li>
+				<li><a href="#">Another action</a></li>
+				<li><a href="#">Something else here</a></li>
+				<li><a href="#">Separated link</a></li>
+			</ul>
+		</div>
 		<form class="col-md-10 no-gutter" ng-submit="sendMessage()">
 			<div class="input-group">
 				<textarea rows="1" class="form-control"
