--- a/assets/app/input/inputBox.html
+++ b/assets/app/input/inputBox.html
@@ -7,10 +7,13 @@
 				<span class="caret"></span>
 			</button>
 			<ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
-				<li><a href="#">Action</a></li>
-				<li><a href="#">Another action</a></li>
-				<li><a href="#">Something else here</a></li>
-				<li><a href="#">Separated link</a></li>
+				<!--<li><a href="#">Action</a></li>-->
+				<!--<li><a href="#">Another action</a></li>-->
+				<!--<li><a href="#">Something else here</a></li>-->
+				<!--<li><a href="#">Separated link</a></li>-->
+				<li ng-repeat="command in commands track by command.command">
+					<a href="#">{{::command.command}} {{::command.label}}</a>
+				</li>
 			</ul>
 		</div>
 		<form class="col-md-10 no-gutter" ng-submit="sendMessage()">
